# Terraforming-carta

./: CMakeLists.txt  README.md  run.bat
data/: Card_data.csv  Test_case.txt  Title_AA.txt
src/: CardDealer.hpp  Params.hpp  Read_csv.hpp  main.cpp  sandbox.cpp  string2speak.hpp
